--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,27 @@
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    /*display: flex;
+    justify-content: center;
+    flex-direction: column; */
+}
+
+header,
+.hero,
+.footer {
+    background-color: #1F2937;
+}
+
 header {
     display: flex;
+    padding: 2rem;
+}
+
+.logo {
+    flex-shrink: 0;
+    font-size: 24px;
+    color: #F8FAF8;
 }
 
 header ul {
@@ -8,8 +30,79 @@ header ul {
     padding: 0;
     justify-content: flex-end;
     width: 100%;
+    gap: 10px;
 }
 
 header li {
     list-style: none;
 }
+.hero {
+    display: flex;
+    justify-content: center;
+    gap: 10em;
+    padding: 50px 0;
+}
+
+.hero-title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.hero-text-small {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+button {
+    border: none;
+    border-radius: .5em;
+    cursor: pointer;
+    padding: 10px 35px;
+}
+
+.hero-button {
+    background-color: #3882f6;
+    color: #F8FAF8;
+}
+
+.sec1 {
+    text-align: center;
+    padding: 25px 0;
+}
+
+.sec1-title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    padding: 25px 0;
+    gap: 2em;
+    margin-bottom: 100px;
+}
+
+.colum {
+    width: 200px;
+
+}
+
+.colum img {
+    border-radius: 2em;
+    border: 4px solid #deebff;
+}
+
+.sec2 {
+    justify-content: center;
+    display: flex;
+    height: 300px;
+    background-color: #e5e7eb;
+    align-items: center;
+    font-size: 36px;
+    font-style: italic;
+}
+
+
