--- a/styles.css
+++ b/styles.css
@@ -15,27 +15,43 @@ header,
 
 header {
     display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 2rem;
+}
+
+.head-con {
+    display: flex;
+    min-width: 1100px;
 }
 
 .logo {
     flex-shrink: 0;
     font-size: 24px;
     color: #F8FAF8;
+    /* margin-left: 100px; */
 }
 
-header ul {
+.head-con ul {
     display: flex;
     margin: 0;
     padding: 0;
     justify-content: flex-end;
     width: 100%;
     gap: 10px;
+
 }
 
 header li {
     list-style: none;
+    color: #F8FAF8;
+    padding-top: 10px;
 }
+
+header a {
+
+}
+
 .hero {
     display: flex;
     justify-content: center;
@@ -52,6 +68,7 @@ header li {
 .hero-text-small {
     font-size: 18px;
     color: #E5E7EB;
+    margin-top: 10px;
 }
 
 button {
@@ -64,6 +81,13 @@ button {
 .hero-button {
     background-color: #3882f6;
     color: #F8FAF8;
+    margin-top: 30px;
+}
+
+.hero-img img {
+    border-radius: 20px;
+    border: 3px solid #000000;
+    filter: drop-shadow(20px 10px 4px #0f0f0f);
 }
 
 .sec1 {
@@ -75,6 +99,7 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
+    margin-top: 30px;
 }
 
 .row {
@@ -82,7 +107,7 @@ button {
     justify-content: center;
     padding: 25px 0;
     gap: 2em;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 
 .colum {
@@ -92,22 +117,40 @@ button {
 
 .colum img {
     border-radius: 2em;
-    border: 4px solid #deebff;
+    border: 4px solid #1f2937;
+    margin-top: 20px;
+    filter: drop-shadow(5px 10px 4px #342f5e);
+}
+
+.coltext {
+    margin-top: 20px;
 }
 
 .sec2 {
-    justify-content: center;
-    display: flex;
     height: 300px;
     background-color: #e5e7eb;
-    align-items: center;
     font-size: 36px;
+    justify-content: center;
+    display: flex; 
+    align-items: center;
+}
+
+
+.sec2-text {
+    width: 850px;
+    font-weight: 100;
     font-style: italic;
 }
 
-.sec2-text {
-    width: 70%;
+.quo-name {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 20px;
+    margin: 20px 20px 0 0;
 }
+
 
 .sec3 {
     display: flex;
@@ -117,11 +160,13 @@ button {
 }
 
 .call-act-container {
-    width: 500px;
     background-color: #3882f6;
     height: 100px;
-    padding: 30px 100px;
+    padding: 40px 150px;
     border-radius: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sec3-title {
@@ -138,6 +183,8 @@ button {
     color: #F9FAF8;
     font-size: large;
     border: 2px solid #F9FAF8;
+    flex-shrink: 0;
+    margin-left: 100px;
 }
 
 footer {
